OOP345SAA/Labs/WS03/at_home/WS03/WS03/error-log.log
w3.cpp: In function ‘int main(int, char**)’:
w3.cpp:29:81: error: use of deleted function ‘sict::LVList<sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >, std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char>, 50>::LVList()’
  LVList<SummableLVPair<std::string, std::string>, std::string, std::string, 50> references;
                                                                                 ^~~~~~~~~~
In file included from w3.cpp:11:
List.h:34:8: note: ‘sict::LVList<sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >, std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char>, 50>::LVList()’ is implicitly deleted because the default definition would be ill-formed:
  class LVList : public List<T, N>
        ^~~~~~
List.h:34:8: error: use of deleted function ‘sict::List<sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >, 50>::List()’
List.h:7:8: note: ‘sict::List<sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >, 50>::List()’ is implicitly deleted because the default definition would be ill-formed:
  class List
        ^~~~
List.h:7:8: error: no matching function for call to ‘sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::SummableLVPair()’
In file included from w3.cpp:10:
LVPair.h:114:3: note: candidate: ‘sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::SummableLVPair(const string&, const string&)’
   SummableLVPair(const std::string& label, const std::string& v)
   ^~~~~~~~~~~~~~
LVPair.h:114:3: note:   candidate expects 2 arguments, 0 provided
LVPair.h:111:8: note: candidate: ‘sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::SummableLVPair(const sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >&)’
  class SummableLVPair<std::string, std::string> : public LVPair<std::string, std::string>
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
LVPair.h:111:8: note:   candidate expects 1 argument, 0 provided
LVPair.h:111:8: note: candidate: ‘sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::SummableLVPair(sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >&&)’
LVPair.h:111:8: note:   candidate expects 1 argument, 0 provided
w3.cpp:64:65: error: use of deleted function ‘sict::LVList<sict::SummableLVPair<std::__cxx11::basic_string<char>, int>, std::__cxx11::basic_string<char>, int, 50>::LVList()’
  LVList<SummableLVPair<std::string, int>, std::string, int, 50> ticketSales;
                                                                 ^~~~~~~~~~~
In file included from w3.cpp:11:
List.h:34:8: note: ‘sict::LVList<sict::SummableLVPair<std::__cxx11::basic_string<char>, int>, std::__cxx11::basic_string<char>, int, 50>::LVList()’ is implicitly deleted because the default definition would be ill-formed:
  class LVList : public List<T, N>
        ^~~~~~
List.h:34:8: error: use of deleted function ‘sict::List<sict::SummableLVPair<std::__cxx11::basic_string<char>, int>, 50>::List()’
List.h:7:8: note: ‘sict::List<sict::SummableLVPair<std::__cxx11::basic_string<char>, int>, 50>::List()’ is implicitly deleted because the default definition would be ill-formed:
  class List
        ^~~~
List.h:7:8: error: no matching function for call to ‘sict::SummableLVPair<std::__cxx11::basic_string<char>, int>::SummableLVPair()’
In file included from w3.cpp:10:
LVPair.h:103:3: note: candidate: ‘sict::SummableLVPair<std::__cxx11::basic_string<char>, int>::SummableLVPair(const string&, const int&)’
   SummableLVPair(const std::string& label, const int& v)
   ^~~~~~~~~~~~~~
LVPair.h:103:3: note:   candidate expects 2 arguments, 0 provided
LVPair.h:100:8: note: candidate: ‘sict::SummableLVPair<std::__cxx11::basic_string<char>, int>::SummableLVPair(const sict::SummableLVPair<std::__cxx11::basic_string<char>, int>&)’
  class SummableLVPair<std::string, int> : public LVPair<std::string, int>
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
LVPair.h:100:8: note:   candidate expects 1 argument, 0 provided
LVPair.h:100:8: note: candidate: ‘sict::SummableLVPair<std::__cxx11::basic_string<char>, int>::SummableLVPair(sict::SummableLVPair<std::__cxx11::basic_string<char>, int>&&)’
LVPair.h:100:8: note:   candidate expects 1 argument, 0 provided
In file included from w3.cpp:11:
List.h: In instantiation of ‘V sict::LVList<T, L, V, N>::accumulate(const L&) const [with T = sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >; L = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>; int N = 50]’:
w3.cpp:55:63:   required from here
List.h:40:73: error: ‘getInitialValue’ is not a member of ‘sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’
    V sumOfElementsInCurrentLVList = SummableLVPair<L,V>::getInitialValue();
                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
List.h:45:22: warning: comparison of integer expressions of different signedness: ‘int’ and ‘size_t’ {aka ‘long unsigned int’} [-Wsign-compare]
    for (int i = 0; i < numElementsInBaseObject; ++i)
                    ~~^~~~~~~~~~~~~~~~~~~~~~~~~
List.h:46:37: error: base operand of ‘->’ has non-pointer type ‘sict::List<sict::SummableLVPair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >, 50>’
     sumOfElementsInCurrentLVList += ((List<T, N>&)*this)->m_list[i];
                                     ^
List.h: In instantiation of ‘V sict::LVList<T, L, V, N>::accumulate(const L&) const [with T = sict::SummableLVPair<std::__cxx11::basic_string<char>, int>; L = std::__cxx11::basic_string<char>; V = int; int N = 50]’:
w3.cpp:90:87:   required from here
List.h:40:73: error: ‘getInitialValue’ is not a member of ‘sict::SummableLVPair<std::__cxx11::basic_string<char>, int>’
    V sumOfElementsInCurrentLVList = SummableLVPair<L,V>::getInitialValue();
                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
List.h:45:22: warning: comparison of integer expressions of different signedness: ‘int’ and ‘size_t’ {aka ‘long unsigned int’} [-Wsign-compare]
    for (int i = 0; i < numElementsInBaseObject; ++i)
                    ~~^~~~~~~~~~~~~~~~~~~~~~~~~
List.h:46:37: error: base operand of ‘->’ has non-pointer type ‘sict::List<sict::SummableLVPair<std::__cxx11::basic_string<char>, int>, 50>’
     sumOfElementsInCurrentLVList += ((List<T, N>&)*this)->m_list[i];
                                     ^
